--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Sheriff Chen's Personal Website</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+</head>
+<body class="is-loading">
+
+    <!--Wrapper-->
+    <div id="wrapper">
+        <section id="main">
+            <header>  <!--About the link-->
+                <span class="avatar">
+                    <img src="images/avatar.jpg" alt="刷新试试？">
+                </span>
+                <h1>Sheriff Chen</h1>
+                <p>Junior FE Engineer</p>
+            </header>
+
+            <footer>
+                <ul class="icons">
+                    <li><a href="images/WeChat.jpg" class="fa-wechat">WeChat</a></li>
+                    <li><a href="https://twitter.com/loebmraz" target="_blank" class="fa-twitter">Twitter</a></li>
+                    <li><a href="https://github.com/DearZui" target="_blank" class="fa-github">Github</a></li>
+                </ul>
+            </footer>
+        </section>
+
+        <footer id="footer">
+            <ul class="copyright">
+                <li>&copy; Sherrif Chen</li>
+                <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            </ul>
+        </footer>
+    </div>
+
+    <script>
+        if ('addEventListener' in window) {
+            window.addEventListener('load', function() { document.body.className = document.body.className.replace(/\bis-loading\b/, ''); });
+        }
+    </script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.poptrox.min.js"></script>
+    <script src="js/main.js"></script>
+</body>
+</html>
