--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                     <li><a href="https://twitter.com/loebmraz" target="_blank" class="fa-twitter">Twitter</a></li>
                     <li><a href="https://github.com/DearZui" target="_blank" class="fa-github">Github</a></li>
                 </ul>
+                <a href="Main/main.html" class="cd-main">Get Started</a>
             </footer>
         </section>
 
