--- a/Main/main.html
+++ b/Main/main.html
@@ -2,7 +2,7 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Code+Pro" rel="stylesheet" type="text/css">
+    <link href="https://fonts.lug.ustc.edu.cn/css?family=Source+Sans+Pro:400,700|Source+Code+Pro" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jquery/jquery-1.4.min.js"></script>
     <title></title>
     <link rel="stylesheet" href="css/Main_main.css">
@@ -14,7 +14,7 @@
             <li><a class="nav-link" href="javascript:;">Blog</a></li>
             <li><a class="nav-link" href="javascript:;">Resources</a></li>
             <li><a class="nav-link" href="javascript:;">CV</a></li>
-            <li><a class="nav-link" href="javascript:;">Contact</a></li>
+            <li><a class="nav-link" href="../contact/contact.html">Contact</a></li>
         </ul>
     </nav>
 
