--- a/contact/contact.html
+++ b/contact/contact.html
@@ -47,10 +47,10 @@
                 <li><a href="javascript:;" class="icon style2 fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="javascript:;" class="icon style2 fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a href="javascript:;" class="icon style2 fa-wechat"><span class="label">WeChat</span></a></li>
-                <li><a href="javascript:;" class="icon style2 fa-qq"><span class="label">QQ</span></a></li>
                 <li><a href="javascript:;" class="icon style2 fa-weibo"><span class="label">Weibo</span></a></li>
                 <li><a href="javascript:;" class="icon style2 fa-github"><span class="label">Github</span></a></li>
-                <li><a href="javascript:;" class="icon style2 fa-soccer-ball-o"><span class="label">Hupu</span></a></li>
+                <li><a href="javascript:;" class="icon style2 fa-soccer-ball-o"><span class="label">Hupu</span></a></li><br>
+                <li><a href="javascript:;" class="icon style2 fa-qq"><span class="label">QQ</span></a></li>
                 <li><a href="javascript:;" class="icon style2 fa-phone"><span class="label">Phone</span></a></li>
                 <li><a href="javascript:;" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
             </ul>
