--- a/contact/contact.html
+++ b/contact/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <link href="https://fonts.lug.ustc.edu.cn/css?family=Source+Sans+Pro:400,700|Source+Code+Pro" rel="stylesheet" type="text/css">
     <script type="text/javascript" src="https://ajax.microsoft.com/ajax/jquery/jquery-1.4.min.js"></script>
-    <title></title>
+    <title>Contact</title>
     <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="../Main/css/Main_main.css">
 </head>
