--- a/Resources/index.html
+++ b/Resources/index.html
@@ -24,10 +24,10 @@
         <ul class="items-gallery">
             <li>
                 <div class="item-image">
-                    <a href="../3d_hover/index.html"><img src="../images/3d-hover.png" alt="3d-hover"></a>
+                    <a href="../3d_hover/index.html" target="_blank"><img src="../images/3d-hover.png" alt="3d-hover"></a>
                 </div>
                 <div class="item-info item-hover">
-                    <a href="../3d_hover/index.html">
+                    <a href="../3d_hover/index.html" target="_blank">
                         <em>3D-Book-Hover</em>
                     </a>
                     <i class="date">April 9, 2016</i>
@@ -35,10 +35,10 @@
             </li>
             <li>
                 <div class="item-image">
-                    <a href="../calendar/index.html"><img src="../images/calendar.png" alt="3d-hover"></a>
+                    <a href="../calendar/index.html" target="_blank"><img src="../images/calendar.png" alt="js-calendar"></a>
                 </div>
                 <div class="item-info item-calendar">
-                    <a href="../calendar/index.html">
+                    <a href="../calendar/index.html" target="_blank">
                         <em>js-Calendar</em>
                     </a>
                     <i class="date">April 8, 2016</i>
@@ -46,13 +46,24 @@
             </li>
             <li>
                 <div class="item-image">
-                    <a href="../css_pie/index.html"><img src="../images/pie.png" alt="3d-hover"></a>
+                    <a href="../css_pie/index.html" target="_blank"><img src="../images/pie.png" alt="css_pie"></a>
                 </div>
                 <div class="item-info item-pie">
-                    <a href="../css_pie/index.html">
+                    <a href="../css_pie/index.html" target="_blank">
                         <em>Rotate-Pie</em>
                     </a>
                     <i class="date">April 9, 2016</i>
+                </div>
+            </li>
+            <li>
+                <div class="item-image">
+                    <a href="../grid_animation/index.html" target="_blank"><img src="../images/grid-animate.png" alt="grid-animate"></a>
+                </div>
+                <div class="item-info item-grid">
+                    <a href="../grid_animation/index.html" target="_blank">
+                        <em>Grid-Animate</em>
+                    </a>
+                    <i class="date">April 1, 2016</i>
                 </div>
             </li>
         </ul>
