--- a/Main/main.html
+++ b/Main/main.html
@@ -11,8 +11,8 @@
     <nav>
         <ul class="nav-display">
             <li><a class="nav-link" href="../index.html">Me</a></li>
-            <li><a class="nav-link" href="javascript:;">Blog</a></li>
-            <li><a class="nav-link" href="javascript:;">Resources</a></li>
+            <li><a class="nav-link" href="http://www.cnblogs.com/dearzui/" target="_blank">Blog</a></li>
+            <li><a class="nav-link" href="../Resources/index.html">Resources</a></li>
             <li><a class="nav-link" href="javascript:;">CV</a></li>
             <li><a class="nav-link" href="../contact/contact.html">Contact</a></li>
         </ul>
