add resource calculator

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -66,6 +66,17 @@
                     <i class="date">April 1, 2016</i>
                 </div>
             </li>
+            <li>
+                <div class="item-image">
+                    <a href="../calculator/index.html" target="_blank"><img src="../images/calculator.png" alt="calculator"></a>
+                </div>
+                <div class="item-info item-cal">
+                    <a href="../calculator/index.html" target="_blank">
+                        <em>JS-CSS3-Calculator</em>
+                    </a>
+                    <i class="date">April 10, 2016</i>
+                </div>
+            </li>
         </ul>
     </div>
 </section>
