Add resource Comment-Section

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -77,6 +77,17 @@
                     <i class="date">April 10, 2016</i>
                 </div>
             </li>
+            <li>
+                <div class="item-image">
+                    <a href="../flexbox/responsive_comment_section/index.html" target="_blank"><img src="../images/CommentSection.png" alt="commentsection"></a>
+                </div>
+                <div class="item-info item-com">
+                    <a href="../flexbox/responsive_comment_section/index.html" target="_blank">
+                        <em>Responsive-Comment-Section</em>
+                    </a>
+                    <i class="date">April 13, 2016</i>
+                </div>
+            </li>
         </ul>
     </div>
 </section>
