add resource 360-product-viewer

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -24,6 +24,17 @@
         <ul class="items-gallery">
             <li>
                 <div class="item-image">
+                    <a href="../360_product_viewer/index.html" target="_blank"><img src="../images/360_product_viewer.png" alt="360_product_viewer"></a>
+                </div>
+                <div class="item-info item-360">
+                    <a href="../360_product_viewer/index.html" target="_blank">
+                        <em>360-Product-Viewer</em>
+                    </a>
+                    <i class="date">April 15, 2016</i>
+                </div>
+            </li>
+            <li>
+                <div class="item-image">
                     <a href="../3d_hover/index.html" target="_blank"><img src="../images/3d-hover.png" alt="3d-hover"></a>
                 </div>
                 <div class="item-info item-hover">
