--- a/360_product_viewer/index.html
+++ b/360_product_viewer/index.html
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-<script src="js/jquery-2.1.4.js"></script>
+<script src="../js/jquery.min.js"></script>
 <script src="js/jquery.mobile.custom.min.js"></script>
 <script src="js/main.js"></script>
 </body>
