resource route change

--- a/flexbox/index.html
+++ b/flexbox/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <a class="avatar" href="#">
-            <img src="img/avatar_user_1.jpg" width="35" alt="Profile Avatar" title="Anie Silverston" />
+            <img src="Responsive_Comment_Section/img/avatar_user_1.jpg" width="35" alt="Profile Avatar" title="Anie Silverston" />
         </a>
 
         <p>Suspendisse gravida sem?</p>
@@ -42,7 +42,7 @@
         </div>
 
         <a class="avatar" href="#">
-            <img src="img/avatar_author.jpg" width="35" alt="Profile Avatar" title="Jack Smith" />
+            <img src="Responsive_Comment_Section/img/avatar_author.jpg" width="35" alt="Profile Avatar" title="Jack Smith" />
         </a>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse gravida sem sit amet molestie portitor.</p>
@@ -57,7 +57,7 @@
         </div>
 
         <a class="avatar" href="#">
-            <img src="img/avatar_user_2.jpg" width="35" alt="Profile Avatar" title="Bradley Jones" />
+            <img src="Responsive_Comment_Section/img/avatar_user_2.jpg" width="35" alt="Profile Avatar" title="Bradley Jones" />
         </a>
 
         <p>Suspendisse gravida sem sit amet molestie portitor?</p>
@@ -72,7 +72,7 @@
         </div>
 
         <a class="avatar" href="#">
-            <img src="img/avatar_author.jpg" width="35" alt="Profile Avatar" title="Jack Smith" />
+            <img src="Responsive_Comment_Section/img/avatar_author.jpg" width="35" alt="Profile Avatar" title="Jack Smith" />
         </a>
 
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisee gravida sem sit amet molestie porttitor.</p>
@@ -86,7 +86,7 @@
             <textarea placeholder="Write your comment here" name="comment"></textarea>
 
             <div>
-                <img src="img/avatar_user_2.jpg" width="35" alt="Profile of Bradley Jones" title="Bradley Jones" />
+                <img src="Responsive_Comment_Section/img/avatar_user_2.jpg" width="35" alt="Profile of Bradley Jones" title="Bradley Jones" />
                 <button type="submit">Submit</button>
             </div>
 
@@ -97,7 +97,7 @@
 </ul>
 
 <!-- Demo ads. Please ignore and remove. -->
-<script src="../../js/jquery.min.js"></script>
+<script src="../js/jquery.min.js"></script>
 
 </body>
 
