--- a/Main/main.html
+++ b/Main/main.html
@@ -13,7 +13,7 @@
             <li><a class="nav-link" href="../index.html">Me</a></li>
             <li><a class="nav-link" href="http://www.cnblogs.com/dearzui/" target="_blank">Blog</a></li>
             <li><a class="nav-link" href="../Resources/index.html">Resources</a></li>
-            <li><a class="nav-link" href="javascript:;">CV</a></li>
+            <li><a class="nav-link" href="../CV.pdf">CV</a></li>
             <li><a class="nav-link" href="../contact/contact.html">Contact</a></li>
         </ul>
     </nav>
