dearzui resource update

--- a/Resources/index.html
+++ b/Resources/index.html
@@ -24,6 +24,17 @@
         <ul class="items-gallery">
             <li>
                 <div class="item-image">
+                    <a href="../hover-menu/index.html" target="_blank"><img src="../images/hover-menu.png" alt="hover-menu"></a>
+                </div>
+                <div class="item-info item-menu">
+                    <a href="../hover-menu/index.html" target="_blank">
+                        <em>Smooth-Hover-Menu</em>
+                    </a>
+                    <i class="date">June 20, 2016</i>
+                </div>
+            </li>
+            <li>
+                <div class="item-image">
                     <a href="../360_product_viewer/index.html" target="_blank"><img src="../images/360_product_viewer.png" alt="360_product_viewer"></a>
                 </div>
                 <div class="item-info item-360">
