resource into main

--- a/Main/main.html
+++ b/Main/main.html
@@ -29,5 +29,100 @@
             <span>报复平庸的方式</span>
         </h1>
     </div>
+
+    <section class="main">
+        <div class="container">
+            <ul class="items-gallery">
+                <li>
+                    <div class="item-image">
+                        <a href="../hover-menu/index.html" target="_blank"><img src="../images/hover-menu.png" alt="hover-menu"></a>
+                    </div>
+                    <div class="item-info item-menu">
+                        <a href="../hover-menu/index.html" target="_blank">
+                            <em>Smooth-Hover-Menu</em>
+                        </a>
+                        <i class="date">June 20, 2016</i>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-image">
+                        <a href="../360_product_viewer/index.html" target="_blank"><img src="../images/360_product_viewer.png" alt="360_product_viewer"></a>
+                    </div>
+                    <div class="item-info item-360">
+                        <a href="../360_product_viewer/index.html" target="_blank">
+                            <em>360-Product-Viewer</em>
+                        </a>
+                        <i class="date">April 15, 2016</i>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-image">
+                        <a href="../3d_hover/index.html" target="_blank"><img src="../images/3d-hover.png" alt="3d-hover"></a>
+                    </div>
+                    <div class="item-info item-hover">
+                        <a href="../3d_hover/index.html" target="_blank">
+                            <em>3D-Book-Hover</em>
+                        </a>
+                        <i class="date">April 9, 2016</i>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-image">
+                        <a href="../calendar/index.html" target="_blank"><img src="../images/calendar.png" alt="js-calendar"></a>
+                    </div>
+                    <div class="item-info item-calendar">
+                        <a href="../calendar/index.html" target="_blank">
+                            <em>js-Calendar</em>
+                        </a>
+                        <i class="date">April 8, 2016</i>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-image">
+                        <a href="../css_pie/index.html" target="_blank"><img src="../images/pie.png" alt="css_pie"></a>
+                    </div>
+                    <div class="item-info item-pie">
+                        <a href="../css_pie/index.html" target="_blank">
+                            <em>Rotate-Pie</em>
+                        </a>
+                        <i class="date">April 9, 2016</i>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-image">
+                        <a href="../grid_animation/index.html" target="_blank"><img src="../images/grid-animate.png" alt="grid-animate"></a>
+                    </div>
+                    <div class="item-info item-grid">
+                        <a href="../grid_animation/index.html" target="_blank">
+                            <em>Grid-Animate</em>
+                        </a>
+                        <i class="date">April 1, 2016</i>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-image">
+                        <a href="../calculator/index.html" target="_blank"><img src="../images/calculator.png" alt="calculator"></a>
+                    </div>
+                    <div class="item-info item-cal">
+                        <a href="../calculator/index.html" target="_blank">
+                            <em>JS-CSS3-Calculator</em>
+                        </a>
+                        <i class="date">April 10, 2016</i>
+                    </div>
+                </li>
+                <li>
+                    <div class="item-image">
+                        <a href="../flexbox/index.html" target="_blank"><img src="../images/CommentSection.png" alt="commentsection"></a>
+                    </div>
+                    <div class="item-info item-com">
+                        <a href="../flexbox/index.html" target="_blank">
+                            <em>Responsive-Comment-Section</em>
+                        </a>
+                        <i class="date">April 13, 2016</i>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </section>
 </body>
 </html>
