--- a/Main/main.html
+++ b/Main/main.html
@@ -14,7 +14,7 @@
             <li><a class="nav-link" href="http://www.cnblogs.com/dearzui/" target="_blank">Blog</a></li>
             <li><a class="nav-link" href="../Resources/index.html">Resources</a></li>
             <li><a class="nav-link" href="../CV/index.html">CV</a></li>
-            <li><a class="nav-link" href="../contact/contact.html">Contact</a></li>
+            <li><a class="nav-link" href="../contact/contact">Contact</a></li>
         </ul>
     </nav>
 
