remove ulr postfix worked

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -11,11 +11,11 @@
 <body>
     <nav>
         <ul class="nav-display">
-            <li><a class="nav-link" href="../index.html">Me</a></li>
+            <li><a class="nav-link" href="../index">Me</a></li>
             <li><a class="nav-link" href="http://www.cnblogs.com/dearzui/" target="_blank">Blog</a></li>
-            <li><a class="nav-link" href="../Resources/index.html">Resources</a></li>
-            <li><a class="nav-link" href="../CV.pdf">CV</a></li>
-            <li><a class="nav-link" href="../contact/contact.html">Contact</a></li>
+            <li><a class="nav-link" href="../Resources/index">Resources</a></li>
+            <li><a class="nav-link" href="../CV/index">CV</a></li>
+            <li><a class="nav-link" href="../contact/contact">Contact</a></li>
         </ul>
     </nav>
 
